crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_tuple-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Tuple(
        Tuple {
            items: [
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "A",
                                generic_args: [],
                            },
                        ],
                    },
                ),
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "B",
                                generic_args: [],
                            },
                        ],
                    },
                ),
                Path(
                    Path {
                        segments: [
                            Segment {
                                ident: "C",
                                generic_args: [],
                            },
                        ],
                    },
                ),
            ],
        },
    ),
)
