crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_type_tuple.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Tuple {
        items: [
            Path {
                segments: [
                    Segment {
                        ident: "A",
                        generic_args: [],
                    },
                ],
            },
        ],
    },
)
